crates/clan/clan-core/tests/snapshots/converter_golden__chat2praat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
File type = "ooTextFile"
Object class = "TextGrid"

xmin = 0.000
xmax = 5042.652
tiers? <exists>
size = 6
item []:
    item [1]:
        class = "IntervalTier"
        name = "CHI [main]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 3
        intervals [1]
            xmin = 0.000
            xmax = 2041.689
            text = ""
        intervals [2]
            xmin = 2041.689
            xmax = 2042.652
            text = "hello there ."
        intervals [3]
            xmin = 2042.652
            xmax = 5042.652
            text = ""
    item [2]:
        class = "IntervalTier"
        name = "CHI [%cod]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 3
        intervals [1]
            xmin = 0.000
            xmax = 2041.689
            text = ""
        intervals [2]
            xmin = 2041.689
            xmax = 2042.652
            text = "this is junk"
        intervals [3]
            xmin = 2042.652
            xmax = 5042.652
            text = ""
    item [3]:
        class = "IntervalTier"
        name = "MOT [main]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 2
        intervals [1]
            xmin = 0.000
            xmax = 5041.689
            text = ""
        intervals [2]
            xmin = 5041.689
            xmax = 5042.652
            text = "how are you ?"
    item [4]:
        class = "IntervalTier"
        name = "MOT [%act]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 4
        intervals [1]
            xmin = 0.000
            xmax = 5041.689
            text = ""
        intervals [2]
            xmin = 5041.689
            xmax = 5041.694
            text = "foo"
        intervals [3]
            xmin = 5041.694
            xmax = 5041.699
            text = "bar"
        intervals [4]
            xmin = 5041.699
            xmax = 5042.652
            text = ""
    item [5]:
        class = "IntervalTier"
        name = "MOT [%com]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 3
        intervals [1]
            xmin = 0.000
            xmax = 5041.689
            text = ""
        intervals [2]
            xmin = 5041.689
            xmax = 5041.769
            text = "pic002"
        intervals [3]
            xmin = 5041.769
            xmax = 5042.652
            text = ""
    item [6]:
        class = "IntervalTier"
        name = "[MAIN-CHAT-HEADERS]"
        xmin = 0.000
        xmax = 5042.652
        intervals: size = 2
        intervals [1]
            xmin = 0.000
            xmax = 0.001
            text = "@UTF8>@Begin>@Languages:eng>@Participants:CHI Child, MOT Mother>@ID:eng|sample|CHI|2;0||||Child|||>@ID:eng|sample|MOT|||||Mother|||>@Media:media-bullets, video>@Comment:Inline timing bullets on main tier and dependent tiers, inline_pic>@Comment:Constructs: inline_bullet, timing_annotation, text_with_bullets,  text_with_bullets_and_pics, media bullets on dependent tiers, inline_pic"
        intervals [2]
            xmin = 0.001
            xmax = 5042.652
            text = ""
