crates/clan/clan-core/tests/snapshots/converter_golden__chat2praat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
File type = "ooTextFile"
Object class = "TextGrid"

xmin = 0
xmax = 5042.652
tiers? <exists>
size = 2
item []:
    item [1]:
        class = "IntervalTier"
        name = "CHI"
        xmin = 0
        xmax = 5042.652
        intervals: size = 1
        intervals [1]:
            xmin = 2041.689
            xmax = 2042.652
            text = "hello there"
    item [2]:
        class = "IntervalTier"
        name = "MOT"
        xmin = 0
        xmax = 5042.652
        intervals: size = 1
        intervals [1]:
            xmin = 5041.689
            xmax = 5042.652
            text = "how are you"
