crates/clan/clan-core/tests/snapshots/converter_golden__chat2srt@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
1
00:34:01,689 --> 00:34:02,652
hello there

2
01:24:01,689 --> 01:24:02,652
how are you
