crates/clan/clan-core/tests/snapshots/converter_golden__chat2text@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
I want some cookies
what kind of cookies
the chocolate ones
we can make some together
