crates/clan/clan-core/tests/snapshots/converter_golden__elan2chat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPEAKER1 Participant
@ID:	eng|change_me_later|SPEAKER1|||||Participant|||
@Media:	, video
*Speaker1:	hello world 1000_3500
*Speaker1:	goodbye now 4000_6500
@End
