crates/clan/clan-core/tests/snapshots/converter_golden__lab2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPK Unidentified
@ID:	eng|lab_corpus|SPK|||||Unidentified|||
*SPK:	hello . 1000_3500
*SPK:	world . 4000_6500
@End
