crates/clan/clan-core/tests/snapshots/converter_golden__lena2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child, MOT Mother, FAT Father
@ID:	eng|lena_corpus|CHI|||||Target_Child|||
@ID:	eng|lena_corpus|MOT|||||Mother|||
@ID:	eng|lena_corpus|FAT|||||Father|||
*CHI:	xxx(2) . 1000_3500
*MOT:	xxx(3) . 4000_6500
*FAT:	xxx(1) . 7000_9000
@End
