crates/clan/clan-core/tests/snapshots/converter_golden__lipp2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|lipp_corpus|CHI|||||Target_Child|||
*CHI:	cat .
%pho:	kaet
*CHI:	dog .
%pho:	dɔg
*CHI:	bird .
%pho:	bɝd
@End
