crates/clan/clan-core/tests/snapshots/converter_golden__play2chat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	eng
@Media:	pipeout, audio
@End
